--- a/lifecycle-data/products/outlook-2019.yml
+++ b/lifecycle-data/products/outlook-2019.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Outlook 2019
-  description: Outlook 2019 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: d88a287bdaffb61b00e977e13a10c6b03487082a
-  ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
+  description: Outlook 2019 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Standard
+  ms.openlocfilehash: 8c38b0d1da85e6f534d902ac0349bdd657a68684
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "868790"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "938071"
 name: Outlook 2019
 summary: >+
-  Outlook 2019 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Outlook 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Standaard
+  Dit is van toepassing op de volgende edities: Standard
 
 products:
 - office
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 09/24/2018
   endDate: 10/14/2025
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
