--- a/lifecycle-data/products/policymaker.yml
+++ b/lifecycle-data/products/policymaker.yml
@@ -2,13 +2,14 @@
 metadata:
   title: Beleidsmaker
   description: De beleidsinstelling van de beleidsregels voor de vaststelling van de levenscyclus.
-  ms.date: 08/19/2020
-  ms.openlocfilehash: d1b7d7ac98ec91c5118023494257fde96fbf2c6f
-  ms.sourcegitcommit: acbc3d1849bad925ef030cf951960bd7eb1b4e42
+  ms.date: 09/01/2020
+  keywords: Application Security,Outlook Edition,Professional 9.0,Registry Extension 2.0,Share Manager 1.0,Software Update 1.0,Software Update 2.0,Standard 1.0,Standard 2.0
+  ms.openlocfilehash: be11ae6bee427a5aa059ec56cb88f007bb5134ec
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 08/19/2020
-  ms.locfileid: "903989"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "938034"
 name: Beleidsmaker
 summary: >+
   De beleidsinstelling van de beleidsregels voor de [vaststelling](/lifecycle/policies/fixed) van de levenscyclus.
@@ -26,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 01/01/2007
   endDate: 01/12/2010
-content: "\n\n> [!NOTE]\n> Ondersteuning voor dit product is onderworpen aan de voorwaarden van de aankoop.\n\n## <a name=\"editions\"></a>Edition \n* Toepassingsbeveiliging\n* Outlook-versie\n* Professionele 9,0\n* Register extensie 2,0\n* Share Manager 1,0\n* Software-update 1,0\n* Software-update 2,0\n* Standaard 1,0\n* Standaard 2,0"
+content: "\n\n> [!NOTE]\n> Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf.\n\n## <a name=\"editions\"></a>Edities \n* Toepassingsbeveiliging\n* Outlook-versie\n* Professionele 9,0\n* Register extensie 2,0\n* Share Manager 1,0\n* Software-update 1,0\n* Software-update 2,0\n* Standaard 1,0\n* Standaard 2,0"
