--- a/lifecycle-data/products/sql-server-2019.yml
+++ b/lifecycle-data/products/sql-server-2019.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: SQL Server 2019
-  description: SQL Server 2019 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: d2a4363c26eb63e860cd117cb7fc0333370033cc
-  ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
+  description: SQL Server 2019 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: on Linux (all editions),on Windows (all editions)
+  ms.openlocfilehash: e80b4d51844a591f9c912932761d121d9c0d6d37
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "868812"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "937960"
 name: SQL Server 2019
 summary: >+
-  SQL Server 2019 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  SQL Server 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: op Linux (alle edities), op Windows (alle edities)
+  Dit geldt voor de volgende edities: op Linux (alle edities), onder Windows (alle edities)
 
 products:
 - sql-server
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 11/04/2019
   endDate: 01/08/2030
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Onderhoudsinformatie](https://blogs.msdn.microsoft.com/sqlreleaseservices/announcing-the-modern-servicing-model-for-sql-server/)\n\n\n## <a name=\"editions\"></a>Edities \n* op Linux (alle edities)\n* op Windows (alle edities)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://blogs.msdn.microsoft.com/sqlreleaseservices/announcing-the-modern-servicing-model-for-sql-server/)\n\n\n## <a name=\"editions\"></a>Edities \n* voor Linux (alle edities)\n* in Windows (alle edities)"
