--- a/lifecycle-data/products/virtual-server-2005-r2.yml
+++ b/lifecycle-data/products/virtual-server-2005-r2.yml
@@ -1,16 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Virtuele server 2005 R2
-  description: Virtual Server 2005 R2 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 9a66e757579adfefd5a7b2dd3f2ee034dcf0a8b6
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: Virtuele Server 2005 R2
+  description: Virtuele Server 2005 R2 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Enterprise,Standard
+  ms.openlocfilehash: 0d4c323a758219f240fc6efbc4ebcfc99e470241
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812279"
-name: Virtuele server 2005 R2
-summary: "Virtual Server 2005 R2 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\nDit geldt voor de volgende edities: Enterprise, Standard\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "937923"
+name: Virtuele Server 2005 R2
+summary: "Virtuele Server 2005 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.\n\nDit is van toepassing op de volgende edities: Enterprise, Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - windows
 policyType: fixed
@@ -25,4 +26,4 @@ releases:
 - version: Original Release
   startDate: 01/28/2006
   endDate: 07/08/2008
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
