--- a/lifecycle-data/products/virtual-server-2005.yml
+++ b/lifecycle-data/products/virtual-server-2005.yml
@@ -1,17 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Virtuele server 2005
-  description: Virtual Server 2005 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 23b86f98da1cbf486ae6b21eefca8d06eaf1361c
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: Virtuele Server 2005
+  description: Virtuele Server 2005 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Enterprise,Management Pack,Standard
+  ms.openlocfilehash: 3a975f558d61c598e0b825d9402467398b348e82
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811917"
-name: Virtuele server 2005
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "937886"
+name: Virtuele Server 2005
 summary: >+
-  Virtual Server 2005 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Virtuele Server 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
   Dit geldt voor de volgende edities: Enterprise, Management Pack, Standard
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 10/29/2004
   endDate: 01/13/2015
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Management Pack\n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Management Pack\n* Standard"
