--- a/lifecycle-data/products/windows-mobile-6.yml
+++ b/lifecycle-data/products/windows-mobile-6.yml
@@ -1,25 +1,26 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Mobile 6
-  description: Windows Mobile 6 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 88d761a5e5b084939b5519f24b0a38744d07b4f4
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Windows Mobile 6 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Classic,Professional,Standard
+  ms.openlocfilehash: 4ee2f6aae75005bfe086bd727a070f43fbae546c
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812254"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "939773"
 name: Windows Mobile 6
 summary: >
-  Windows Mobile 6 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Mobile 6 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Classic, Professional, Standard
+  Dit geldt voor de volgende edities: klassiek, professioneel, standaard
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - windows
 policyType: fixed-mainstream-only
@@ -30,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 05/12/2007
   endDate: 01/08/2013
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Klassiek\n* Professionele\n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Klassiek\n* Professional\n* Standard"
