--- a/lifecycle-data/products/windows-mobile-61.yml
+++ b/lifecycle-data/products/windows-mobile-61.yml
@@ -1,25 +1,26 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows Mobile 6.1
-  description: Windows Mobile 6.1 volgt het beleid voor een vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 09ef8cd65daf2ed34f0557d1180ba9b405bf0956
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: Windows Mobile 6,1
+  description: Windows Mobile 6,1 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Adaptation Kit,Professional,Standard
+  ms.openlocfilehash: 97c434aaac90a1923508ffe5b1d18e735bfa4101
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811736"
-name: Windows Mobile 6.1
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "939810"
+name: Windows Mobile 6,1
 summary: >
-  Windows Mobile 6.1 volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Mobile 6,1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Adaptation Kit, Professional, Standard
+  Dit geldt voor de volgende edities: aanpassings pakket, Professional, Standard
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - windows
 policyType: fixed-mainstream-only
@@ -30,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 07/01/2008
   endDate: 01/08/2013
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Aanpassing Kit\n* Professionele\n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Aanpassings pakket\n* Professional\n* Standard"
