--- a/lifecycle-data/products/windows-server-2008-r2.yml
+++ b/lifecycle-data/products/windows-server-2008-r2.yml
@@ -2,13 +2,14 @@
 metadata:
   title: Windows Server 2008 R2
   description: Windows Server 2008 R2 volgt het vaste levenscyclusbeleid.
-  ms.date: 08/27/2020
-  ms.openlocfilehash: 531fe1d11032fd9fb6ae5fa6e4db46d01b7f63e4
-  ms.sourcegitcommit: 0adb28bbd953e938286d5b8fb03cab57a2d18b3b
+  ms.date: 09/01/2020
+  keywords: Datacenter,Enterprise,HPC Edition,Itanium-Based Systems,Standard,Web
+  ms.openlocfilehash: d11313c6b34939376f603efe48a886993b46d8ef
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 08/27/2020
-  ms.locfileid: "922909"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "939662"
 name: Windows Server 2008 R2
 summary: "Windows Server 2008 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Datacenter, Enterprise, HPC Edition, op Itanium-gebaseerde systemen, Standard, Web\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. \n"
 products:
