--- a/lifecycle-data/products/windows-xp-media-center-edition-2005.yml
+++ b/lifecycle-data/products/windows-xp-media-center-edition-2005.yml
@@ -2,13 +2,14 @@
 metadata:
   title: Windows XP Media Center Editie 2005
   description: Windows XP Media Center Editie 2005 volgt het beleid voor de vaste levenscyclus.
-  ms.date: 08/12/2020
-  ms.openlocfilehash: 51d0bb29320a507fba4ea0c18e11bfa85f92dccf
-  ms.sourcegitcommit: 1974bfc9a9fccaac36daaa1015b7f31c8814ae07
+  ms.date: 09/01/2020
+  keywords: Extender
+  ms.openlocfilehash: 9fbcaff077300c23ca6656b1ab13accf396a042d
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 08/12/2020
-  ms.locfileid: "892009"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "938811"
 name: Windows XP Media Center Editie 2005
 summary: >+
   Windows XP Media Center Editie 2005 volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
