--- a/lifecycle-data/products/sharepoint-foundation-2013.yml
+++ b/lifecycle-data/products/sharepoint-foundation-2013.yml
@@ -1,17 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: SharePoint Foundation 2013
-  description: SharePoint Foundation 2013 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 547a00535381e850eb04e63f5f876c1485928c9a
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: SharePoint Foundation 2013 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: ''
+  ms.openlocfilehash: f3241162e2d2a4953850015a7b1625b07adfbcbf
+  ms.sourcegitcommit: 81b08c37762fa90d8258fe5a26c257089bcc981b
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "852052"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "941071"
 name: SharePoint Foundation 2013
 summary: >+
-  SharePoint Foundation 2013 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  SharePoint Foundation 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
 products:
@@ -28,4 +29,4 @@ releases:
 - version: Original Release
   startDate: 01/09/2013
   endDate: 04/14/2015
-content: ''
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Microsoft SharePoint Foundation 2013 Developer Documentation](/sharepoint/dev)\n* [Productdocumentatie voor Microsoft SharePoint Foundation 2013](/sharepoint/sharepoint-server)"
