--- a/lifecycle-data/products/project-server-2016.yml
+++ b/lifecycle-data/products/project-server-2016.yml
@@ -1,17 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Project Server 2016
-  description: Project Server 2016 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: e3925bf70d95a2c5f84a9ef30f3079abefc7d9eb
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: Project Server 2016 volgt het vaste levenscyclus beleid.
+  ms.date: 09/02/2020
+  keywords: ''
+  ms.openlocfilehash: a9dc96cf8e5a99917a0a31ccc23a413d9ff61ccc
+  ms.sourcegitcommit: 37b80a1b6fcda4dc6147d99a362a75b884d08a51
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "852137"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "941443"
 name: Project Server 2016
 summary: >+
-  Project Server 2016 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Project Server 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
 products:
@@ -25,4 +26,4 @@ releases:
 - version: Original Release
   startDate: 05/01/2016
   endDate: 07/14/2026
-content: ''
+content: "\n\n> [!NOTE]\n> Zie documentatie voor [product](https://docs.microsoft.com/project/project-server-2013-and-2016) en [ontwikkelaars](https://developer.microsoft.com/project/docs) ."
