--- a/lifecycle-data/products/microsoft-office-live-communications-server-2005.yml
+++ b/lifecycle-data/products/microsoft-office-live-communications-server-2005.yml
@@ -2,13 +2,14 @@
 metadata:
   title: Microsoft Office Live Communications Server 2005
   description: Microsoft Office Live Communications Server 2005 volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 709969b9c25ec55bfe3538a49076f6d640003cba
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  ms.date: 09/10/2020
+  keywords: Enterprise,Standard
+  ms.openlocfilehash: 56bdae2a655c365c4b477c677dc6642350d837e8
+  ms.sourcegitcommit: c0c65f657b1da8e588fda5bedd3572fb2e3168bc
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812028"
+  ms.lasthandoff: 09/10/2020
+  ms.locfileid: "1001532"
 name: Microsoft Office Live Communications Server 2005
 summary: "Microsoft Office Live Communications Server 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Enterprise, Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
